--- a/index-it.html
+++ b/index-it.html
@@ -5,36 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyFairTech</title>
   <link rel="stylesheet" href="style-pastel.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0; padding: 0;
+      background: #f4f7f8;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #b996e3;
+      color: #fff;
+      padding: 20px;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .nav-left h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+    .nav-center a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+    }
+    .nav-center a:hover {
+      text-decoration: underline;
+    }
+    .language-selector a img {
+      width: 22px;
+      height: 15px;
+      margin-left: 8px;
+      border-radius: 3px;
+    }
+    main {
+      padding: 40px 20px;
+    }
+    footer {
+      background: #b996e3;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <nav>
       <div class="nav-left">
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index-it.html">Inicio</a>
-        <a href="servicios-it.html">Servicios</a>
-        <a href="casos-it.html">Casos</a>
-        <a href="nosotros-it.html">Nosotros</a>
-        <a href="contacto-it.html">Contacto</a>
+        <a href="index-it.html">Home</a>
+        <a href="servicios-it.html">Servizi</a>
+        <a href="casos-it.html">Casi</a>
+        <a href="nosotros-it.html">Chi Siamo</a>
+        <a href="contacto-it.html">Contatto</a>
       </div>
       <div class="language-selector">
-        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
-        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
+        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Spagnolo"></a>
+        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="Inglese"></a>
+        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Portoghese"></a>
         <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
       </div>
     </nav>
   </header>
+
   <main>
     <section>
-      <h2>Benvenuto su MyFairTech</h2>
-      <p>Contenido de prueba para esta sección.</p>
+      <h2>Cosa facciamo</h2>
+      <p>Offriamo servizi completi di consulenza IT focalizzati su infrastrutture cloud, virtualizzazione e soluzioni moderne di accesso remoto per potenziare il tuo business.</p>
+    </section>
+
+    <section>
+      <h2>I nostri servizi</h2>
+      <ul>
+        <li>Progettazione e gestione di infrastrutture cloud</li>
+        <li>Modernizzazione delle applicazioni legacy — portale sul web in pochi semplici passi, senza necessità di riprogrammazione!</li>
+        <li>Soluzioni ZTNA — sostituisci la tua vecchia VPN e modernizza in sicurezza</li>
+        <li>Supporto multilingue: Inglese, Spagnolo, Italiano e Portoghese</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Perché sceglierci</h2>
+      <ul>
+        <li>Anni di esperienza nella risoluzione di sfide IT complesse</li>
+        <li>Portiamo il tuo business al livello successivo! Provalo gratis.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Prenota una demo</a>
+        </li>
+        <li>Soluzioni affidabili, scalabili e focalizzate sul cliente</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contattaci</h2>
+      <p>Hai domande, hai bisogno di una soluzione o vuoi modernizzare la tua infrastruttura IT?</p>
+      <p>📧 Scrivici a: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Preferisci una chiamata veloce? <a href="https://calendly.com/myfairtech" target="_blank">Prenota una consulenza gratuita qui</a></p>
+      <p>Parliamo Inglese, Spagnolo, Italiano e Portoghese. Contattaci — risolviamo insieme.</p>
     </section>
   </main>
+
   <footer>
-    &copy; 2025 MyFairTech. Todos los derechos reservados.
+    &copy; 2025 MyFairTech. Tutti i diritti riservati.
   </footer>
+
 </body>
 </html>
