--- a/contacto-it.html
+++ b/contacto-it.html
@@ -13,11 +13,11 @@
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index-it.html">Inicio</a>
-        <a href="servicios-it.html">Servicios</a>
-        <a href="casos-it.html">Casos</a>
-        <a href="nosotros-it.html">Nosotros</a>
-        <a href="contacto-it.html">Contacto</a>
+      <a href="index-it.html">Home</a>
+<a href="servicios-it.html">Servizi</a>
+<a href="casos-it.html">Casi</a>
+<a href="nosotros-it.html">Chi Siamo</a>
+<a href="contacto-it.html">Contatto</a>
       </div>
       <div class="language-selector">
         <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
