--- a/index-en.html
+++ b/index-en.html
@@ -1,123 +1,226 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech</title>
-  <link rel="stylesheet" href="style-pastel.css" />
+  <title>MyFairTech - IT Consulting & Solutions</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
+    :root {
+      --color-lila: #b996e3;
+      --color-lila-dark: #8a6bc1;
+      --color-background: #f4f7f8;
+      --color-text: #222;
+      --color-white: #fff;
+      --color-cta: #7c56b4;
+      --color-cta-hover: #623d97;
+    }
+    * { box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #f4f7f8;
-      color: #222;
-      line-height: 1.6;
+      font-family: 'Poppins', sans-serif;
+      background: var(--color-background);
+      color: var(--color-text);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     header {
-      background: #b996e3;
-      color: #fff;
-      padding: 20px;
-    }
-    nav {
+      background: var(--color-lila);
+      color: var(--color-white);
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .nav-left h1 {
+    header h1 {
+      font-weight: 600;
       margin: 0;
       font-size: 1.8rem;
+      letter-spacing: 1.5px;
     }
-    .nav-center a {
-      margin: 0 10px;
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: var(--color-white);
       text-decoration: none;
-      color: #fff;
-      font-weight: 500;
+      font-weight: 600;
+      padding: 8px 12px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
     }
-    .nav-center a:hover {
-      text-decoration: underline;
+    nav a:hover {
+      background-color: var(--color-lila-dark);
     }
-    .language-selector a img {
-      width: 22px;
-      height: 15px;
-      margin-left: 8px;
-      border-radius: 3px;
+    .language-selector a {
+      display: inline-block;
+      margin-left: 12px;
+      border-radius: 4px;
+      overflow: hidden;
+      border: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+    .language-selector a:hover {
+      border-color: var(--color-white);
+    }
+    .language-selector img {
+      width: 26px;
+      height: 18px;
     }
     main {
-      padding: 40px 20px;
+      flex: 1;
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .hero {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 40px 30px;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+    .hero h2 {
+      font-weight: 600;
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      color: var(--color-lila-dark);
+    }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 650px;
+      margin: 0 auto 24px auto;
+      color: #555;
+    }
+    .btn-primary {
+      background-color: var(--color-cta);
+      color: var(--color-white);
+      padding: 12px 28px;
+      font-weight: 600;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    .btn-primary:hover {
+      background-color: var(--color-cta-hover);
+    }
+    .services {
+      margin-top: 60px;
+      display: grid;
+      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+    .card {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 24px 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      font-weight: 600;
+      color: var(--color-lila);
+    }
+    .card p {
+      color: #444;
+      font-size: 0.95rem;
+    }
+    .contact-section {
+      background: var(--color-lila);
+      color: var(--color-white);
+      margin: 80px 0 40px 0;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+    }
+    .contact-section h2 {
+      margin-top: 0;
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
+    .contact-section p {
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+    }
+    .contact-section a {
+      color: var(--color-white);
+      font-weight: 600;
+      text-decoration: underline;
     }
     footer {
-      background: #b996e3;
-      color: #fff;
+      background: var(--color-lila-dark);
+      color: var(--color-white);
       text-align: center;
-      padding: 10px;
+      padding: 15px 10px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-
   <header>
+    <h1>MyFairTech</h1>
     <nav>
-      <div class="nav-left">
-        <h1>MyFairTech</h1>
-      </div>
-      <div class="nav-center">
-        <a href="index-en.html">Home</a>
-<a href="servicios-en.html">Services</a>
-<a href="casos-en.html">Cases</a>
-<a href="nosotros-en.html">About</a>
-<a href="contacto-en.html">Contact</a>
-      </div>
-      <div class="language-selector">
-        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
-        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
-        <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
-      </div>
+      <a href="index-en.html">Home</a>
+      <a href="servicios-en.html">Services</a>
+      <a href="casos-en.html">Cases</a>
+      <a href="nosotros-en.html">About</a>
+      <a href="contacto-en.html">Contact</a>
     </nav>
+    <div class="language-selector">
+      <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
+      <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
+      <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
+      <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
+    </div>
   </header>
 
   <main>
-    <section>
-      <h2>What We Do</h2>
-      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    <section class="hero">
+      <h2>Practical and tailored tech solutions for your business</h2>
+      <p>We offer full IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to boost your business.</p>
+      <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Book your free demo</a>
     </section>
 
-    <section>
-      <h2>Our Services</h2>
-      <ul>
-        <li>Cloud infrastructure design & management</li>
-        <li>
-          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
-        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
-        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
-      </ul>
+    <section class="services">
+      <div class="card">
+        <h3>Consulting</h3>
+        <p>Optimization of corrective and predictive processes. Identification and removal of hidden IT costs. We modernize infrastructure and workflows for efficient, practical solutions.</p>
+      </div>
+      <div class="card">
+        <h3>IT Support</h3>
+        <p>Tailored plans to ensure availability and functionality of critical services. We take care of IT tasks, enhancing your systems and business platforms.</p>
+      </div>
+      <div class="card">
+        <h3>Legacy App Modernization</h3>
+        <p>We move your legacy applications to the web without rewriting code, using secure and scalable solutions.</p>
+      </div>
     </section>
 
-    <section>
-      <h2>Why Choose Us?</h2>
-      <ul>
-        <li>Years of experience solving complex IT challenges</li>
-        <li>
-          We take your business to the next level! Give it a try, it's free.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
-        </li>
-        <li>Client-focused, reliable, and scalable solutions</li>
-      </ul>
-    </section>
-
-    <section>
+    <section class="contact-section">
       <h2>Contact Us</h2>
-      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
-      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
-      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+      <p>Got questions or need a solution? Email us at <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Book a free consultation here</a></p>
+      <p>We speak English, Spanish, Italian and Portuguese. Let's talk!</p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 MyFairTech. Todos los derechos reservados.
+    &copy; 2025 MyFairTech. All rights reserved.
   </footer>
-
 </body>
 </html>
