--- a/index-pt.html
+++ b/index-pt.html
@@ -3,119 +3,224 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech</title>
-  <link rel="stylesheet" href="style-pastel.css" />
+  <title>MyFairTech - Consultoria e Soluções de TI</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
+    :root {
+      --color-lila: #b996e3;
+      --color-lila-dark: #8a6bc1;
+      --color-background: #f4f7f8;
+      --color-text: #222;
+      --color-white: #fff;
+      --color-cta: #7c56b4;
+      --color-cta-hover: #623d97;
+    }
+    * { box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #f4f7f8;
-      color: #222;
-      line-height: 1.6;
+      font-family: 'Poppins', sans-serif;
+      background: var(--color-background);
+      color: var(--color-text);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     header {
-      background: #b996e3;
-      color: #fff;
-      padding: 20px;
-    }
-    nav {
+      background: var(--color-lila);
+      color: var(--color-white);
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .nav-left h1 {
+    header h1 {
+      font-weight: 600;
       margin: 0;
       font-size: 1.8rem;
+      letter-spacing: 1.5px;
     }
-    .nav-center a {
-      margin: 0 10px;
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: var(--color-white);
       text-decoration: none;
-      color: #fff;
-      font-weight: 500;
+      font-weight: 600;
+      padding: 8px 12px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
     }
-    .nav-center a:hover {
-      text-decoration: underline;
+    nav a:hover {
+      background-color: var(--color-lila-dark);
     }
-    .language-selector a img {
-      width: 22px;
-      height: 15px;
-      margin-left: 8px;
-      border-radius: 3px;
+    .language-selector a {
+      display: inline-block;
+      margin-left: 12px;
+      border-radius: 4px;
+      overflow: hidden;
+      border: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+    .language-selector a:hover {
+      border-color: var(--color-white);
+    }
+    .language-selector img {
+      width: 26px;
+      height: 18px;
     }
     main {
-      padding: 40px 20px;
+      flex: 1;
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .hero {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 40px 30px;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+    .hero h2 {
+      font-weight: 600;
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      color: var(--color-lila-dark);
+    }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 650px;
+      margin: 0 auto 24px auto;
+      color: #555;
+    }
+    .btn-primary {
+      background-color: var(--color-cta);
+      color: var(--color-white);
+      padding: 12px 28px;
+      font-weight: 600;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    .btn-primary:hover {
+      background-color: var(--color-cta-hover);
+    }
+    .services {
+      margin-top: 60px;
+      display: grid;
+      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+    .card {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 24px 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      font-weight: 600;
+      color: var(--color-lila);
+    }
+    .card p {
+      color: #444;
+      font-size: 0.95rem;
+    }
+    .contact-section {
+      background: var(--color-lila);
+      color: var(--color-white);
+      margin: 80px 0 40px 0;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+    }
+    .contact-section h2 {
+      margin-top: 0;
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
+    .contact-section p {
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+    }
+    .contact-section a {
+      color: var(--color-white);
+      font-weight: 600;
+      text-decoration: underline;
     }
     footer {
-      background: #b996e3;
-      color: #fff;
+      background: var(--color-lila-dark);
+      color: var(--color-white);
       text-align: center;
-      padding: 10px;
+      padding: 15px 10px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-
   <header>
+    <h1>MyFairTech</h1>
     <nav>
-      <div class="nav-left">
-        <h1>MyFairTech</h1>
-      </div>
-      <div class="nav-center">
-        <a href="index-pt.html">Início</a>
-        <a href="servicios-pt.html">Serviços</a>
-        <a href="casos-pt.html">Casos</a>
-        <a href="nosotros-pt.html">Sobre</a>
-        <a href="contacto-pt.html">Contato</a>
-      </div>
-      <div class="language-selector">
-        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Espanhol"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="Inglês"></a>
-        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
-        <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
-      </div>
+      <a href="index-pt.html">Início</a>
+      <a href="servicios-pt.html">Serviços</a>
+      <a href="casos-pt.html">Casos</a>
+      <a href="nosotros-pt.html">Sobre</a>
+      <a href="contacto-pt.html">Contato</a>
     </nav>
+    <div class="language-selector">
+      <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
+      <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
+      <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
+      <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
+    </div>
   </header>
 
   <main>
-    <section>
-      <h2>O que fazemos</h2>
-      <p>Oferecemos serviços completos de consultoria de TI focados em infraestrutura de nuvem, virtualização e soluções modernas de acesso remoto para potencializar o seu negócio.</p>
+    <section class="hero">
+      <h2>Soluções tecnológicas práticas e sob medida para o seu negócio</h2>
+      <p>Oferecemos serviços completos de consultoria em TI com foco em infraestrutura em nuvem, virtualização e acesso remoto moderno para impulsionar sua empresa.</p>
+      <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Agende sua demo gratuita</a>
     </section>
 
-    <section>
-      <h2>Nossos Serviços</h2>
-      <ul>
-        <li>Design e gerenciamento de infraestrutura em nuvem</li>
-        <li>Modernização de aplicações legadas — traga-as para a web em poucos passos, sem necessidade de reprogramação!</li>
-        <li>Soluções ZTNA — substitua sua VPN antiga e modernize com segurança</li>
-        <li>Suporte multilíngue: Inglês, Espanhol, Italiano e Português</li>
-      </ul>
+    <section class="services">
+      <div class="card">
+        <h3>Consultoria</h3>
+        <p>Otimização de processos corretivos e preditivos. Identificação e eliminação de custos ocultos de TI. Modernizamos infraestrutura e fluxos de trabalho para soluções práticas e eficientes.</p>
+      </div>
+      <div class="card">
+        <h3>Suporte de TI</h3>
+        <p>Planos sob medida para garantir a disponibilidade e funcionamento de serviços críticos. Assumimos as tarefas de TI e potencializamos seus sistemas e plataformas de negócios.</p>
+      </div>
+      <div class="card">
+        <h3>Modernização de Aplicações Legadas</h3>
+        <p>Levamos suas aplicações legadas para a web sem necessidade de reescrever o código, com soluções seguras e escaláveis.</p>
+      </div>
     </section>
 
-    <section>
-      <h2>Por que nos escolher?</h2>
-      <ul>
-        <li>Anos de experiência resolvendo desafios complexos de TI</li>
-        <li>Levamos seu negócio para o próximo nível! Experimente gratuitamente.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Agendar uma demonstração</a>
-        </li>
-        <li>Soluções confiáveis, escaláveis e centradas no cliente</li>
-      </ul>
-    </section>
-
-    <section>
+    <section class="contact-section">
       <h2>Fale Conosco</h2>
-      <p>Tem alguma dúvida, precisa de uma solução ou quer modernizar sua infraestrutura de TI?</p>
-      <p>📧 Escreva para: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Prefere uma chamada rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agende uma consulta gratuita aqui</a></p>
-      <p>Falamos Inglês, Espanhol, Italiano e Português. Entre em contato — vamos resolver juntos.</p>
+      <p>Tem dúvidas ou precisa de uma solução? Escreva para <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>Prefere uma ligação rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agende uma consulta gratuita aqui</a></p>
+      <p>Falamos português, espanhol, inglês e italiano. Vamos conversar!</p>
     </section>
   </main>
 
   <footer>
     &copy; 2025 MyFairTech. Todos os direitos reservados.
   </footer>
-
 </body>
 </html>
