--- a/index-it.html
+++ b/index-it.html
@@ -3,119 +3,224 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech</title>
-  <link rel="stylesheet" href="style-pastel.css" />
+  <title>MyFairTech - Consulenza e Soluzioni IT</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
+    :root {
+      --color-lila: #b996e3;
+      --color-lila-dark: #8a6bc1;
+      --color-background: #f4f7f8;
+      --color-text: #222;
+      --color-white: #fff;
+      --color-cta: #7c56b4;
+      --color-cta-hover: #623d97;
+    }
+    * { box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #f4f7f8;
-      color: #222;
-      line-height: 1.6;
+      font-family: 'Poppins', sans-serif;
+      background: var(--color-background);
+      color: var(--color-text);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     header {
-      background: #b996e3;
-      color: #fff;
-      padding: 20px;
-    }
-    nav {
+      background: var(--color-lila);
+      color: var(--color-white);
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .nav-left h1 {
+    header h1 {
+      font-weight: 600;
       margin: 0;
       font-size: 1.8rem;
+      letter-spacing: 1.5px;
     }
-    .nav-center a {
-      margin: 0 10px;
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: var(--color-white);
       text-decoration: none;
-      color: #fff;
-      font-weight: 500;
+      font-weight: 600;
+      padding: 8px 12px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
     }
-    .nav-center a:hover {
-      text-decoration: underline;
+    nav a:hover {
+      background-color: var(--color-lila-dark);
     }
-    .language-selector a img {
-      width: 22px;
-      height: 15px;
-      margin-left: 8px;
-      border-radius: 3px;
+    .language-selector a {
+      display: inline-block;
+      margin-left: 12px;
+      border-radius: 4px;
+      overflow: hidden;
+      border: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+    .language-selector a:hover {
+      border-color: var(--color-white);
+    }
+    .language-selector img {
+      width: 26px;
+      height: 18px;
     }
     main {
-      padding: 40px 20px;
+      flex: 1;
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .hero {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 40px 30px;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+    .hero h2 {
+      font-weight: 600;
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      color: var(--color-lila-dark);
+    }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 650px;
+      margin: 0 auto 24px auto;
+      color: #555;
+    }
+    .btn-primary {
+      background-color: var(--color-cta);
+      color: var(--color-white);
+      padding: 12px 28px;
+      font-weight: 600;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    .btn-primary:hover {
+      background-color: var(--color-cta-hover);
+    }
+    .services {
+      margin-top: 60px;
+      display: grid;
+      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+    .card {
+      background: var(--color-white);
+      border-radius: 12px;
+      padding: 24px 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      font-weight: 600;
+      color: var(--color-lila);
+    }
+    .card p {
+      color: #444;
+      font-size: 0.95rem;
+    }
+    .contact-section {
+      background: var(--color-lila);
+      color: var(--color-white);
+      margin: 80px 0 40px 0;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+    }
+    .contact-section h2 {
+      margin-top: 0;
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
+    .contact-section p {
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+    }
+    .contact-section a {
+      color: var(--color-white);
+      font-weight: 600;
+      text-decoration: underline;
     }
     footer {
-      background: #b996e3;
-      color: #fff;
+      background: var(--color-lila-dark);
+      color: var(--color-white);
       text-align: center;
-      padding: 10px;
+      padding: 15px 10px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-
   <header>
+    <h1>MyFairTech</h1>
     <nav>
-      <div class="nav-left">
-        <h1>MyFairTech</h1>
-      </div>
-      <div class="nav-center">
-        <a href="index-it.html">Home</a>
-        <a href="servicios-it.html">Servizi</a>
-        <a href="casos-it.html">Casi</a>
-        <a href="nosotros-it.html">Chi Siamo</a>
-        <a href="contacto-it.html">Contatto</a>
-      </div>
-      <div class="language-selector">
-        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Spagnolo"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="Inglese"></a>
-        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Portoghese"></a>
-        <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
-      </div>
+      <a href="index-it.html">Home</a>
+      <a href="servicios-it.html">Servizi</a>
+      <a href="casos-it.html">Casi</a>
+      <a href="nosotros-it.html">Chi siamo</a>
+      <a href="contacto-it.html">Contatto</a>
     </nav>
+    <div class="language-selector">
+      <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
+      <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
+      <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
+      <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
+    </div>
   </header>
 
   <main>
-    <section>
-      <h2>Cosa facciamo</h2>
-      <p>Offriamo servizi completi di consulenza IT focalizzati su infrastrutture cloud, virtualizzazione e soluzioni moderne di accesso remoto per potenziare il tuo business.</p>
+    <section class="hero">
+      <h2>Soluzioni tecnologiche pratiche e su misura per la tua azienda</h2>
+      <p>Offriamo servizi completi di consulenza IT focalizzati su infrastrutture cloud, virtualizzazione e accesso remoto moderno per far crescere il tuo business.</p>
+      <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Prenota una demo gratuita</a>
     </section>
 
-    <section>
-      <h2>I nostri servizi</h2>
-      <ul>
-        <li>Progettazione e gestione di infrastrutture cloud</li>
-        <li>Modernizzazione delle applicazioni legacy — portale sul web in pochi semplici passi, senza necessità di riprogrammazione!</li>
-        <li>Soluzioni ZTNA — sostituisci la tua vecchia VPN e modernizza in sicurezza</li>
-        <li>Supporto multilingue: Inglese, Spagnolo, Italiano e Portoghese</li>
-      </ul>
+    <section class="services">
+      <div class="card">
+        <h3>Consulenza</h3>
+        <p>Ottimizzazione dei processi correttivi e predittivi. Identificazione ed eliminazione dei costi nascosti dell'IT. Modernizziamo infrastrutture e workflow per soluzioni pratiche ed efficienti.</p>
+      </div>
+      <div class="card">
+        <h3>Supporto IT</h3>
+        <p>Piani su misura per garantire la disponibilità e la funzionalità dei servizi critici. Ci occupiamo delle attività IT per potenziare i tuoi sistemi e piattaforme aziendali.</p>
+      </div>
+      <div class="card">
+        <h3>Modernizzazione delle App Legacy</h3>
+        <p>Trasformiamo le tue applicazioni legacy per il web senza riscrivere il codice, con soluzioni sicure e scalabili.</p>
+      </div>
     </section>
 
-    <section>
-      <h2>Perché sceglierci</h2>
-      <ul>
-        <li>Anni di esperienza nella risoluzione di sfide IT complesse</li>
-        <li>Portiamo il tuo business al livello successivo! Provalo gratis.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Prenota una demo</a>
-        </li>
-        <li>Soluzioni affidabili, scalabili e focalizzate sul cliente</li>
-      </ul>
-    </section>
-
-    <section>
+    <section class="contact-section">
       <h2>Contattaci</h2>
-      <p>Hai domande, hai bisogno di una soluzione o vuoi modernizzare la tua infrastruttura IT?</p>
-      <p>📧 Scrivici a: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Preferisci una chiamata veloce? <a href="https://calendly.com/myfairtech" target="_blank">Prenota una consulenza gratuita qui</a></p>
-      <p>Parliamo Inglese, Spagnolo, Italiano e Portoghese. Contattaci — risolviamo insieme.</p>
+      <p>Hai domande o cerchi una soluzione? Scrivici a <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>Preferisci una chiamata veloce? <a href="https://calendly.com/myfairtech" target="_blank">Prenota una consulenza gratuita</a></p>
+      <p>Parliamo italiano, spagnolo, inglese e portoghese. Parliamone!</p>
     </section>
   </main>
 
   <footer>
     &copy; 2025 MyFairTech. Tutti i diritti riservati.
   </footer>
-
 </body>
 </html>
