--- a/index-en.html
+++ b/index-en.html
@@ -215,7 +215,7 @@
       <h2>Contact Us</h2>
       <p>Got questions or need a solution? Email us at <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
       <p>Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Book a free consultation here</a></p>
-      <p>We speak English, Spanish, Italian and Portuguese. Let's talk!</p>
+      <p>Let's talk!</p>
     </section>
   </main>
 
