--- a/index-it.html
+++ b/index-it.html
@@ -215,7 +215,7 @@
       <h2>Contattaci</h2>
       <p>Hai domande o cerchi una soluzione? Scrivici a <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
       <p>Preferisci una chiamata veloce? <a href="https://calendly.com/myfairtech" target="_blank">Prenota una consulenza gratuita</a></p>
-      <p>Parliamo italiano, spagnolo, inglese e portoghese. Parliamone!</p>
+      <p>Parliamone!</p>
     </section>
   </main>
 
