--- a/index-pt.html
+++ b/index-pt.html
@@ -215,7 +215,7 @@
       <h2>Fale Conosco</h2>
       <p>Tem dúvidas ou precisa de uma solução? Escreva para <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
       <p>Prefere uma ligação rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agende uma consulta gratuita aqui</a></p>
-      <p>Falamos português, espanhol, inglês e italiano. Vamos conversar!</p>
+      <p>Vamos conversar!</p>
     </section>
   </main>
 
