--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <h2>Contáctanos</h2>
     <p>¿Tienes alguna pregunta o necesitas una solución? Escríbenos a <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
     <p>¿Prefieres una llamada rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agenda una consulta gratuita aquí</a></p>
-    <p>Hablamos Inglés, Español, Italiano y Portugués. ¡Hablemos!</p>
+    <p>¡Hablemos!</p>
   </section>
 </main>
 
