--- a/cloud-pt.html
+++ b/cloud-pt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,20 +33,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-    <a href="index-en.html">Home</a>
+    <a href="index-pt.html">Início</a>
     <div class="dropdown">
-      <a href="servicios-en.html">Services ▾</a>
+      <a href="servicios-pt.html">Serviços ▾</a>
       <div class="dropdown-content">
-        <a href="consultoria-en.html">Consulting</a>
-        <a href="soporte-en.html">IT Support</a>
-        <a href="modernizacion-en.html">App Modernization</a>
-        <a href="ztna-en.html">ZTNA / Remote Access</a>
-        <a href="cloud-en.html">Cloud Infrastructure</a>
+        <a href="consultoria-pt.html">Consultoria</a>
+        <a href="soporte-pt.html">Suporte de TI</a>
+        <a href="modernizacion-pt.html">Modernização de Apps</a>
+        <a href="ztna-pt.html">ZTNA / Acesso Remoto</a>
+        <a href="cloud-pt.html">Infraestrutura em Nuvem</a>
       </div>
     </div>
-    <a href="casos-en.html">Cases</a>
-    <a href="nosotros-en.html">About Us</a>
-    <a href="contacto-en.html">Contact</a>
+    <a href="casos-pt.html">Casos</a>
+    <a href="nosotros-pt.html">Sobre Nós</a>
+    <a href="contacto-pt.html">Contato</a>
   </nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
@@ -56,8 +56,8 @@
   </div>
 </header>
 <main style="padding: 40px; text-align:center;">
-  <h2>About Us</h2>
-  <p>Página de ejemplo en idioma EN - About Us</p>
+  <h2>Infraestrutura em Nuvem</h2>
+  <p>Página de ejemplo en idioma PT - Infraestrutura em Nuvem</p>
 </main>
 <footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
 </body>
