--- a/consultoria-it.html
+++ b/consultoria-it.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,20 +33,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-    <a href="index-en.html">Home</a>
+    <a href="index-it.html">Home</a>
     <div class="dropdown">
-      <a href="servicios-en.html">Services ▾</a>
+      <a href="servicios-it.html">Servizi ▾</a>
       <div class="dropdown-content">
-        <a href="consultoria-en.html">Consulting</a>
-        <a href="soporte-en.html">IT Support</a>
-        <a href="modernizacion-en.html">App Modernization</a>
-        <a href="ztna-en.html">ZTNA / Remote Access</a>
-        <a href="cloud-en.html">Cloud Infrastructure</a>
+        <a href="consultoria-it.html">Consulenza</a>
+        <a href="soporte-it.html">Supporto IT</a>
+        <a href="modernizacion-it.html">Modernizzazione App</a>
+        <a href="ztna-it.html">ZTNA / Accesso Remoto</a>
+        <a href="cloud-it.html">Infrastruttura Cloud</a>
       </div>
     </div>
-    <a href="casos-en.html">Cases</a>
-    <a href="nosotros-en.html">About Us</a>
-    <a href="contacto-en.html">Contact</a>
+    <a href="casos-it.html">Casi</a>
+    <a href="nosotros-it.html">Chi Siamo</a>
+    <a href="contacto-it.html">Contatto</a>
   </nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
@@ -56,8 +56,8 @@
   </div>
 </header>
 <main style="padding: 40px; text-align:center;">
-  <h2>About Us</h2>
-  <p>Página de ejemplo en idioma EN - About Us</p>
+  <h2>Consulenza</h2>
+  <p>Página de ejemplo en idioma IT - Consulenza</p>
 </main>
 <footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
 </body>
