--- a/index.html
+++ b/index.html
@@ -3,304 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech - Consultoría y Soluciones TI</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <title>MyFairTech</title>
   <style>
-    :root {
-      --color-lila: #b996e3;
-      --color-lila-oscuro: #8a6bc1;
-      --color-gris-fondo: #f4f7f8;
-      --color-texto: #222;
-      --color-blanco: #fff;
-      --color-cta: #7c56b4;
-      --color-cta-hover: #623d97;
+    body { font-family: sans-serif; margin: 0; background: #f4f7f8; }
+    header { background: #b996e3; color: white; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
+    nav { display: flex; gap: 20px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    .dropdown { position: relative; display: inline-block; }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: white;
+      min-width: 200px;
+      z-index: 1;
+      border-radius: 6px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0; padding: 0;
-      font-family: 'Poppins', sans-serif;
-      background: var(--color-gris-fondo);
-      color: var(--color-texto);
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      background: var(--color-lila);
-      color: var(--color-blanco);
-      padding: 20px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    header h1 {
-      font-weight: 600;
-      margin: 0;
-      font-size: 1.8rem;
-      letter-spacing: 1.5px;
-    }
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: var(--color-blanco);
+    .dropdown-content a {
+      color: #444;
+      padding: 10px 16px;
       text-decoration: none;
-      font-weight: 600;
-      padding: 8px 12px;
-      border-radius: 4px;
-      transition: background-color 0.3s ease;
-    }
-    nav a:hover {
-      background-color: var(--color-lila-oscuro);
-    }
-    .language-selector a {
-      display: inline-block;
-      margin-left: 12px;
-      border-radius: 4px;
-      overflow: hidden;
-      border: 2px solid transparent;
-      transition: border-color 0.3s ease;
-    }
-    .language-selector a:hover {
-      border-color: var(--color-blanco);
-    }
-    .language-selector img {
-      width: 26px;
-      height: 18px;
       display: block;
     }
-
-    main {
-      flex: 1;
-      max-width: 1100px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    .hero {
-      background: var(--color-blanco);
-      border-radius: 12px;
-      padding: 40px 30px;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
-      text-align: center;
-    }
-    .hero h2 {
-      font-weight: 600;
-      font-size: 2.2rem;
-      margin-bottom: 12px;
-      color: var(--color-lila-oscuro);
-    }
-    .hero p {
-      font-size: 1.1rem;
-      max-width: 650px;
-      margin: 0 auto 24px auto;
-      color: #555;
-    }
-    .btn-primary {
-      background-color: var(--color-cta);
-      color: var(--color-blanco);
-      padding: 12px 28px;
-      font-weight: 600;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-size: 1rem;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-    }
-    .btn-primary:hover {
-      background-color: var(--color-cta-hover);
-    }
-
-    .services {
-      margin-top: 60px;
-      display: grid;
-      gap: 30px;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    }
-    .card {
-      background: var(--color-blanco);
-      border-radius: 12px;
-      padding: 24px 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
-    .card h3 {
-      font-weight: 600;
-      margin-top: 0;
-      color: var(--color-lila);
-    }
-    .card p {
-      color: #444;
-      font-size: 0.95rem;
-      margin-bottom: 16px;
-    }
-
-    .contact-section {
-      background: var(--color-lila);
-      color: var(--color-blanco);
-      margin: 80px 0 40px 0;
-      border-radius: 12px;
-      padding: 30px 20px;
-      text-align: center;
-      box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-    }
-    .contact-section h2 {
-      margin-top: 0;
-      margin-bottom: 15px;
-      font-weight: 600;
-    }
-    .contact-section p {
-      font-size: 1.1rem;
-      margin-bottom: 12px;
-    }
-    .contact-section a {
-      color: var(--color-blanco);
-      font-weight: 600;
-      text-decoration: underline;
-    }
-
-    footer {
-      background: var(--color-lila-oscuro);
-      color: var(--color-blanco);
-      text-align: center;
-      padding: 15px 10px;
-      font-size: 0.9rem;
-      margin-top: auto;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-      }
-      nav {
-        gap: 10px;
-      }
-      .hero h2 {
-        font-size: 1.7rem;
-      }
-      main {
-        margin: 20px auto;
-        padding: 0 15px;
-      }
-    }
-    /* Estilo para el dropdown de Servicios */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--color-blanco);
-  min-width: 220px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-  z-index: 1000;
-  border-radius: 6px;
-  top: 100%;
-  left: 0;
-}
-
-.dropdown-content a {
-  color: #444;
-  padding: 10px 16px;
-  text-decoration: none;
-  display: block;
-  font-size: 0.95rem;
-  font-weight: 500;
-  transition: background-color 0.2s ease;
-}
-
-.dropdown-content a:hover {
-  background-color: #f3e8ff;
-  color: #6b21a8;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
+    .dropdown:hover .dropdown-content { display: block; }
+    .language-selector img { width: 26px; height: 18px; margin-left: 10px; border-radius: 3px; border: 2px solid transparent; }
   </style>
 </head>
 <body>
-
 <header>
   <h1>MyFairTech</h1>
   <nav>
-  <a href="index.html">Inicio</a>
-
-  <div class="dropdown">
-    <a href="servicios.html">Servicios ▾</a>
-    <div class="dropdown-content">
-      <a href="consultoria.html">Consultoría</a>
-      <a href="soporte.html">Soporte IT</a>
-      <a href="modernizacion.html">Modernización de Apps</a>
-      <a href="ztna.html">ZTNA / Acceso Remoto</a>
-      <a href="cloud.html">Infraestructura Cloud</a>
+    <a href="index-">Inicio</a>
+    <div class="dropdown">
+      <a href="servicios-">Servicios ▾</a>
+      <div class="dropdown-content">
+        <a href="consultoria-">Consultoría</a>
+        <a href="soporte-">Soporte IT</a>
+        <a href="modernizacion-">Modernización de Apps</a>
+        <a href="ztna-">ZTNA / Acceso Remoto</a>
+        <a href="cloud-">Infraestructura Cloud</a>
+      </div>
     </div>
-  </div>
-
-  <a href="casos.html">Casos</a>
-  <a href="nosotros.html">Nosotros</a>
-  <a href="contacto.html">Contacto</a>
-</nav>
-
+    <a href="casos-">Casos</a>
+    <a href="nosotros-">Nosotros</a>
+    <a href="contacto-">Contacto</a>
+  </nav>
   <div class="language-selector">
-    <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
-    <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
-    <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
-    <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
+    <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
+    <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN"></a>
+    <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT"></a>
+    <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT"></a>
   </div>
 </header>
-
-<main>
-  <section class="hero">
-    <h2>Soluciones tecnológicas prácticas y a medida para tu empresa</h2>
-    <p>Ofrecemos servicios completos de consultoría TI enfocados en infraestructura en la nube, virtualización y soluciones modernas de acceso remoto para potenciar tu negocio.</p>
-    <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Agenda tu demo gratis</a>
-  </section>
-
-  <section class="services" aria-label="Servicios destacados">
-    <div class="card">
-      <h3>Consultoría</h3>
-      <p>Optimización de los procesos correctivos y predictivos. Identificación y eliminación de costos ocultos IT. Modernizamos infraestructura y workflows para soluciones prácticas y eficientes.</p>
-    </div>
-    <div class="card">
-      <h3>Soporte TI</h3>
-      <p>Plan a medida para asegurar disponibilidad y funcionalidad de servicios críticos. Tomamos a nuestro cargo las tareas de IT, potenciando sistemas y plataformas clave de tu empresa.</p>
-    </div>
-    <div class="card">
-      <h3>Modernización de Aplicaciones</h3>
-      <p>Llevamos tus aplicaciones legadas a la web sin necesidad de reprogramar, con soluciones seguras y escalables.</p>
-    </div>
-  </section>
-
-  <section class="contact-section" aria-label="Contacto">
-    <h2>Contáctanos</h2>
-    <p>¿Tienes alguna pregunta o necesitas una solución? Escríbenos a <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-    <p>¿Prefieres una llamada rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agenda una consulta gratuita aquí</a></p>
-    <p>¡Hablemos!</p>
-  </section>
+<main style="padding: 40px; text-align:center;">
+  <h2>Inicio</h2>
+  <p>Página de ejemplo en idioma ES - Inicio</p>
 </main>
-
-<footer>
-  &copy; 2025 MyFairTech. Todos los derechos reservados.
-</footer>
-
+<footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
 </body>
 </html>
