--- a/modernizacion-en.html
+++ b/modernizacion-en.html
@@ -56,8 +56,8 @@
   </div>
 </header>
 <main style="padding: 40px; text-align:center;">
-  <h2>About Us</h2>
-  <p>Página de ejemplo en idioma EN - About Us</p>
+  <h2>App Modernization</h2>
+  <p>Página de ejemplo en idioma EN - App Modernization</p>
 </main>
 <footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
 </body>
