--- a/soporte.html
+++ b/soporte.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,20 +33,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-    <a href="index-en.html">Home</a>
+    <a href="index-">Inicio</a>
     <div class="dropdown">
-      <a href="servicios-en.html">Services ▾</a>
+      <a href="servicios-">Servicios ▾</a>
       <div class="dropdown-content">
-        <a href="consultoria-en.html">Consulting</a>
-        <a href="soporte-en.html">IT Support</a>
-        <a href="modernizacion-en.html">App Modernization</a>
-        <a href="ztna-en.html">ZTNA / Remote Access</a>
-        <a href="cloud-en.html">Cloud Infrastructure</a>
+        <a href="consultoria-">Consultoría</a>
+        <a href="soporte-">Soporte IT</a>
+        <a href="modernizacion-">Modernización de Apps</a>
+        <a href="ztna-">ZTNA / Acceso Remoto</a>
+        <a href="cloud-">Infraestructura Cloud</a>
       </div>
     </div>
-    <a href="casos-en.html">Cases</a>
-    <a href="nosotros-en.html">About Us</a>
-    <a href="contacto-en.html">Contact</a>
+    <a href="casos-">Casos</a>
+    <a href="nosotros-">Nosotros</a>
+    <a href="contacto-">Contacto</a>
   </nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
@@ -56,8 +56,8 @@
   </div>
 </header>
 <main style="padding: 40px; text-align:center;">
-  <h2>About Us</h2>
-  <p>Página de ejemplo en idioma EN - About Us</p>
+  <h2>Soporte IT</h2>
+  <p>Página de ejemplo en idioma ES - Soporte IT</p>
 </main>
 <footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
 </body>
