--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-    <a href="index">Inicio</a>
+    <a href="index-">Inicio</a>
     <div class="dropdown">
-      <a href="servicios">Servicios ▾</a>
-      <div class="dropdowncontent">
-        <a href="consultoria">Consultoría</a>
-        <a href="soporte">Soporte IT</a>
-        <a href="modernizacion">Modernización de Apps</a>
-        <a href="ztna">ZTNA / Acceso Remoto</a>
-        <a href="cloud">Infraestructura Cloud</a>
+      <a href="servicios-">Servicios ▾</a>
+      <div class="dropdown-content">
+        <a href="consultoria-">Consultoría</a>
+        <a href="soporte-">Soporte IT</a>
+        <a href="modernizacion-">Modernización de Apps</a>
+        <a href="ztna-">ZTNA / Acceso Remoto</a>
+        <a href="cloud-">Infraestructura Cloud</a>
       </div>
     </div>
-    <a href="casos">Casos</a>
-    <a href="nosotros">Nosotros</a>
-    <a href="contacto">Contacto</a>
+    <a href="casos-">Casos</a>
+    <a href="nosotros-">Nosotros</a>
+    <a href="contacto-">Contacto</a>
   </nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
